# 100Days-CUDA

./: .gitignore  CMakeLists.txt  README.md  generate_dir.sh  run.sh
common/: CMakeLists.txt
common/include/: cuda_utils.cuh  data_utils.cuh  timer.cuh
common/src/: cuda_utils.cu  data_utils.cu  timer.cu
days/day001/: CMakeLists.txt  README.md  vector_add.cu
days/day002/: CMakeLists.txt  vector_mul.cu
days/day003/: CMakeLists.txt  benchmark_pytorch.py  figure.py  matrix_addition.cu
days/day004/: CMakeLists.txt  benchmark_pytorch.py  figure.py  matrix_scalar.cu
days/day005/: CMakeLists.txt  benchmark_pytorch.py  figure.py  matrix_transpose.cu
days/day006/: CMakeLists.txt  benchmark_pytorch.py  figure.py  matrix_vec_multiplication.cu
days/day007/: CMakeLists.txt  figure.py  matrix_vec_multiplication_opt.cu
days/day008/: CMakeLists.txt  benchmark_pytorch.py  figure.py  matrix_multiplication_opt.cu  matrix_transpose_opt.cu
days/day009/: CMakeLists.txt  benchmark_pytorch.py  figure.py  matrix_multiplication_opt.cu
docs/: cuda_notes.md  learning_path.md  resources.md
tests/: CMakeLists.txt
